# argon-base

./: CMakeLists.txt  README.md
include/base/: block_alloc.h  intersection.h  list.h  math_ext.h  memory_blocks_pool.h  objects_pool.h  pjw.h  stack.h  str_insert.h  str_replace.h  text.h  vector.h
src/base/: block_alloc.c  intersection.c  list.c  math_ext.c  memmem.c  memory_blocks_pool.c  objects_pool.c  pjw.c  stack.c  str_insert.c  str_replace.c  vector.c
src/tests/: test_str_insert.c
